<resources>
    <string name="app_name">HowApp</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter">Enter</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
